--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "cst3144-backend",
     "version": "1.0.0",
-    "description": "Backend for CST3144 Full Stack Coursework",
+    "description": "Backend API for CST3144 Full Stack Development Coursework",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "seed": "node seedDatabase.js"
     },
     "keywords": [
         "express",
@@ -15,12 +16,15 @@
     "author": "Your Name",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.18.2",
-        "mongodb": "^6.3.0",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "express": "^4.21.2",
+        "mongodb": "^6.3.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
+    },
+    "engines": {
+        "node": ">=16.0.0"
     }
 }
